--- a/papers/cs294-tidalsim/cs294-tidalsim.tex
+++ b/papers/cs294-tidalsim/cs294-tidalsim.tex
@@ -214,6 +214,8 @@ You would like the best of all worlds: a simulator that is fast (high throughput
   FPGA-Based Emulators & Firesim & $\approx$10 MIPS & 2-6 hours & Cycle-exact & RTL-level traces and uArch metrics & \$10k+ \\
   \midrule
   ASIC-Based Emulators & ZeBu, Palladium & $\approx$10 MIPS & < 1 hour & Cycle-exact & RTL-level traces and uArch metrics & \$10M+ \\
+  \midrule
+  Multi-Level Simulation & TidalSim \textbf{(this paper)} & $\approx$10 MIPS & minutes & < 5\% IPC error & RTL-level traces and uArch metrics & Minimal \\
   \bottomrule
   \end{tabular}
   \caption{The spectrum of analytical, architectural, and microarchitectural simulation techniques and how they compare on various axes. Numbers assume simulation of a low core count SoC.}
@@ -298,10 +300,8 @@ There is also a detailed warmup period during which short-lived microarchitectur
   \label{fig:simpoint}
 \end{figure}
 
-Sampled simulation adds error on top of the existing modeling error in performance simulators.
+% Sampled simulation adds error on top of the existing modeling error in performance simulators.
 There are broadly two types of sampling proposed in the literature: Simpoint-style sampling\cite{simpoint3} and SMARTs-style sampling\cite{smarts} (summarized in Figure \ref{fig:sampled_simulation}).
-
-% TODO: add Simpoint phase clustering figs
 
 \subsubsection{Simpoint-Style Sampling}
 
@@ -328,13 +328,22 @@ Since the SMARTs technique has no understanding of the relationship of one inter
 
 \section{The Concept of Multi-Level Simulation}
 
+We can see that existing simulation techniques cannot simultaneously deliver on all the axes of high accuracy, high throughput, low startup latency, and low cost.
+This bottlenecks the microarchitectural iteration loop since evaluation is either 1) too slow to run on realistic workloads, or 2) too inaccurate to make decisions, or 3) incurs too high a cost or has too long of a startup latency to use in the iteration loop.
+
 \subsection{Issues with Existing Simulation Techniques}
+
+Cycle-level or trace-based simulators suffer from low accuracy and unbounded errors which are further exacerbated by sampled simulation which adds sampling error on top of modeling error.
+
 
 What's wrong with perf sims (low accuracy).
 What's wrong with RTL/FPGA sims (bad throughput or high latency + high cost).
-What's wrong with sampled perf sims
+What's wrong with sampled perf sims (compounded low accuracy, not a good tradeoff).
 
 \subsection{Our Proposal}
+
+We need some way to combine the accuracy of RTL simulation
+Sampled multi-level simulation!
 
 \subsection{Why RTL-level?}
 
@@ -344,6 +353,10 @@ Aren't "trends" enough? Not when we care about small IPC changes! The absolute n
 Miscorrelation vs RTL *compounds* over simulation time!
 % Introduce the problem and your idea using *examples* and only then present the general case
 % Don't want to design perf model and then design RTL to match that - what a waste, not agile!
+
+We can't try to 'fix' perf models. And in the new open source research era we have RTL! for every part of the system too! we can draw realistic conclusions finally! cite Chipyard, ESP, OpenPiton
+
+Why Simpoint? fine time-granularity, high liklihood of unique traces, eventual ability to extrapolate across workloads
 
 For embeddings:
 Binary agnostic
